# TMS_Py71_General

./: .gitignore  main.py  main2.py
AsyncBot/: main.py  pyproject.toml
Django Project/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
Django Project/django-project/: run.sh
Django Project/django-project/accounting/: admin.py  models.py  tasks.py  urls.py  views.py
Django Project/django-project/accounting/migrations/: 0001_initial.py
Django Project/django-project/notes/: apps.py  filters.py  forms.py  services.py  tasks.py  views.py
Django Project/django-project/notes/api/: filters.py  permissions.py  serializers.py  urls.py  views.py
Django Project/django-project/notes/migrations/: 0001_initial.py  0003_note_image.py  0006_note_search_vector_note_note_search_vector_gin_and_more.py
Django Project/django-project/project/: middlewares.py  settings.py  urls.py
Django Project/django-project/templates/: index.html
Django Project/django-project/templates/posts/: create.html  list.html
Django Project/nginx/: default.conf
Django REST Project/: .dockerignore  Dockerfile  Dockerfile_single_stage  docker-compose.yaml  pyproject.toml
Django REST Project/django_project/: run.sh
Django REST Project/django_project/accounting/: models.py  serializers.py  urls.py  views.py
Django REST Project/django_project/accounting/migrations/: 0001_initial.py
Django REST Project/django_project/accounting/swagger/: schemas.py  serializers.py
Django REST Project/django_project/cart/: models.py
Django REST Project/django_project/cart/migrations/: 0001_initial.py
Django REST Project/django_project/catalog/: filters.py  models.py  serializers.py  services.py  urls.py  views.py
Django REST Project/django_project/catalog/migrations/: 0001_initial.py  0002_tag_product_tags.py  0003_productimage.py
Django REST Project/django_project/catalog/tests/: test_permissions.py  tests_services.py
Django REST Project/django_project/django_project/: settings.py  urls.py  wsgi.py
Django REST Project/django_project/django_project/extra/: permissions.py
Django REST Project/django_project/orders/: models.py
Django REST Project/django_project/orders/migrations/: 0001_initial.py
FastAPIProject/: alembic.ini  main.py  pyproject.toml
FastAPIProject/src/: exceptions.py  models.py  settings.py
FastAPIProject/src/application/: auth.py  chat.py  notes.py
FastAPIProject/src/application/api_tokens/: handlers.py  repo.py
FastAPIProject/src/db/: connector.py  exception_handler.py
FastAPIProject/src/domain/: api_tokens.py  chat_message.py  exceptions.py  users.py
FastAPIProject/src/dto/: auth.py
FastAPIProject/src/handlers/: auth.py  general.py  ws.py
FastAPIProject/src/infrastructure/: dependencies.py  settings.py
FastAPIProject/src/schemas/: auth.py  general.py
FastAPIProject/src/services/: auth.py  chat.py  notes.py  users.py
(+197 files in other folders)
