[project]
name = "django-test-project"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "celery>=5.6.3",
    "crispy-bootstrap5>=2026.3",
    "django>=6.0.4",
    "django-celery-beat>=2.9.0",
    "django-crispy-forms>=2.6",
    "django-debug-toolbar>=6.3.0",
    "django-filter>=25.2",
    "django-unfold>=0.91.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt[crypto]>=5.5.1",
    "djoser>=2.3.3",
    "drf-nested-routers>=0.95.0",
    "eventlet>=0.41.0",
    "faker>=40.15.0",
    "flower>=2.0.1",
    "gunicorn>=26.0.0",
    "pillow>=12.2.0",
    "psycopg2>=2.9.12",
    "redis>=8.0.0",
]

[dependency-groups]
dev = [
    "celery-types>=0.26.0",
]
