[project]
name = "django-rest-project"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.5",
    "django-filter>=25.2",
    "django-silk>=5.5.0",
    "djangorestframework>=3.17.1",
    "djoser>=2.3.3",
    "drf-nested-routers>=0.95.0",
    "drf-spectacular>=0.29.0",
    "pillow>=12.2.0",
]
