[project]
name = "django-rest-project"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.5",
    "django-filter>=25.2",
    "django-silk>=5.5.0",
    "djangorestframework>=3.17.1",
    "djoser>=2.3.3",
    "drf-nested-routers>=0.95.0",
    "drf-spectacular>=0.29.0",
    "pillow>=12.2.0",
]

[dependency-groups]
dev = [
    "celery-types>=0.26.0",
    "django-stubs>=6.0.6",
    "djangorestframework-stubs>=3.17.0",
    "mypy>=2.2.0",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "django_project.django_project.settings"
